--- a/src/scss/finance.scss
+++ b/src/scss/finance.scss
@@ -47,8 +47,8 @@
   position: relative;
   @include flex(center, center, row, nowrap);
   margin: 0;
-  height: 50px;
-  width: 50px;
+  min-height: 50px;
+  min-width: 50px;
   border: none;
   background-color: #ffffff;
   padding: 0;
@@ -96,6 +96,10 @@
     padding-top: 16px;
     padding-bottom: 27px;
 
+    .button-block {
+      @include flex(space-between, flex-start, row, wrap);
+    }
+
     .title-container {
       margin-bottom: 36px;
       height: auto;
@@ -110,8 +114,8 @@
 
     .social-button {
       margin-left: 6px;
-      width: 44px;
-      height: 44px;
+      min-width: 44px;
+      min-height: 44px;
     }
 
     .social-container .text {
