--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -65,6 +65,10 @@
   .container {
     padding-top: 29px;
     @include flex(space-between, flex-end, row, nowrap);
+
+    .header-img {
+      overflow: hidden;
+    }
   }
 
   .text-block {
@@ -95,6 +99,7 @@
   .img {
     min-width: 585px;
     margin-right: -27px;
+    overflow: hidden;
   }
 
   .button-container {
@@ -143,6 +148,10 @@
   .background-header {
     background-image: linear-gradient(126deg, #00a6ed -4%, #00eb98 100%);
   }
+
+  .header-img {
+    overflow: hidden;
+  }
 }
 
 @media (max-width: 767px) {
@@ -183,13 +192,14 @@
       width: auto;
       max-width: 375px;
       margin: 23px 0 29px 0;
-      letter-spacing: -0.1px;
+      letter-spacing: 0px;
     }
 
     .button-container {
       flex-direction: column;
       align-items: flex-start;
       padding-bottom: 41px;
+      max-width: 400px;
 
       button:first-of-type {
         width: 163px;
