--- a/src/scss/kickstarter.scss
+++ b/src/scss/kickstarter.scss
@@ -92,7 +92,7 @@
     }
 
     .figure-block {
-      margin: auto 18px 32px -5px;
+      margin: auto 17px 32px -5px;
       padding-right: 9px;
 
       &:last-of-type {
