--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,6 +36,11 @@ img {
   margin: 0;
 }
 
+.button-block-try {
+  background-color: chartreuse;
+  @include flex(space-between, flex-start, row, wrap);
+}
+
 @import "header.scss";
 @import "top-project.scss";
 @import "projects-preview.scss";
@@ -44,15 +49,5 @@ img {
 @import "kickstarter.scss";
 @import "choose.scss";
 @import "footer.scss";
-
-// .shdw {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 270px;
-//   height: 30px;
-//   border-radius: 4px;
-//   box-shadow: 0px 0px 122px 0px rgba(0, 0, 0, 0.1);
-// }
 
 // @import "media.scss";
